Change MessageLoop type for GPU tests with Ozone.

Some Ozone platforms require a specific MessageLoop type in the GPU.
Namely, this is Ozone X11 that depends on libevent which in turn needs
TYPE_UI message loop to get XEvents.

When initializing the GPU process we check
OzonePlatform::GetMessageLoopTypeForGPU() to get the message loop type.
Do something similar for gpu_unittets and gpu_ipc_service_unittests so
that they can pass with Ozone X11.

Those tests will still run by default with Ozone headless on
linux_chromium_chromeos_ozone_rel_ng. This can be changed later if the
tests appear stable on an FYI bot with Ozone X11.

BUG=686092
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2682393003
Cr-Commit-Position: refs/heads/master@{#453602}

Former-commit-id: ffae7e0a3390a6f07620f47f95d5d00a0a887f66