gpu/ipc/service/gpu_channel_unittest.cc
@@ -10,6 +10,7 @@
 #include "gpu/ipc/service/gpu_channel.h"
 #include "gpu/ipc/service/gpu_channel_manager.h"
 #include "gpu/ipc/service/gpu_channel_test_common.h"
+#include "gpu/test_message_loop_type.h"
 #include "ipc/ipc_test_sink.h"
 #include "ui/gl/gl_surface_stub.h"
 #include "ui/gl/init/gl_factory.h"
@@ -19,7 +20,9 @@ namespace gpu {
 
 class GpuChannelTest : public GpuChannelTestCommon {
  public:
-  GpuChannelTest() : GpuChannelTestCommon() {}
+  GpuChannelTest()
+      : GpuChannelTestCommon(),
+        message_loop_(test::GetMessageLoopTypeForGpu()) {}
   ~GpuChannelTest() override {}
 
   void SetUp() override {
